--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,500i,600,700,800');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,500&display=swap');
 // Globals
-$body-font-family: 'Montserrat', sans-serif !default;
+$body-font-family: 'Montserrat Alternates', sans-serif !default;
 $font-size-root: 14px !default;
 $material-light: (
         'background': #fafafa
